// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LoginPage > snapshots > should match snapshot IF form has errors 1`] = `
<div
  class="cwa-flex cwa-min-h-full cwa-flex-col cwa-justify-center cwa-py-12 sm:cwa-px-6 lg:cwa-px-8 cwa-bg-dark"
>
  <div
    class="sm:cwa-mx-auto sm:cwa-w-full sm:cwa-max-w-md"
  >
    <logo-stub
      class="cwa-mx-auto cwa-h-12 cwa-w-auto cwa-text-neutral-400"
    />
  </div>
  <div
    class="cwa-mt-8 sm:cwa-mx-auto sm:cwa-w-full sm:cwa-max-w-md cwa-text-white"
  >
    <div
      class="cwa-bg-neutral-800 cwa-py-8 cwa-px-4 cwa-shadow sm:cwa-px-10"
    >
      <warning-stub
        class="cwa-mb-4"
      >
        Something went wrong, try submitting form again
      </warning-stub>
      bound HTMLFormElement {
        "0": <button
          class="cwa-flex cwa-w-full cwa-justify-center cwa-bg-neutral-600 cwa-py-2 cwa-px-3 cwa-text-sm cwa-font-semibold cwa-text-white cwa-shadow-sm hover:cwa-bg-neutral-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-neutral-600"
          type="submit"
        >
          Submit
        </button>,
      }
    </div>
  </div>
</div>
`;

exports[`LoginPage > snapshots > should match snapshot IF form is submitting 1`] = `
<div
  class="cwa-flex cwa-min-h-full cwa-flex-col cwa-justify-center cwa-py-12 sm:cwa-px-6 lg:cwa-px-8 cwa-bg-dark"
>
  <div
    class="sm:cwa-mx-auto sm:cwa-w-full sm:cwa-max-w-md"
  >
    <logo-stub
      class="cwa-mx-auto cwa-h-12 cwa-w-auto cwa-text-neutral-400"
    />
  </div>
  <div
    class="cwa-mt-8 sm:cwa-mx-auto sm:cwa-w-full sm:cwa-max-w-md cwa-text-white"
  >
    <div
      class="cwa-bg-neutral-800 cwa-py-8 cwa-px-4 cwa-shadow sm:cwa-px-10"
    >
      <!--v-if-->
      bound HTMLFormElement {
        "0": <button
          class="cwa-opacity-50 cwa-flex cwa-w-full cwa-justify-center cwa-bg-neutral-600 cwa-py-2 cwa-px-3 cwa-text-sm cwa-font-semibold cwa-text-white cwa-shadow-sm hover:cwa-bg-neutral-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-neutral-600"
          disabled=""
          type="submit"
        >
          Submit
        </button>,
      }
    </div>
  </div>
</div>
`;
